# libenv

./: Dockerfile  MANIFEST.in  README.md  env.yaml  run-tests.sh  setup.py
docs/: benchmarks.txt
envs/ctestenv/: CMakeLists.txt  ctestenv.c
envs/gotestenv/src/gotestenv/: gotestenv.go
envs/guess-number/: CMakeLists.txt  guess-number.c
libenv/: __init__.py  libenv.h  libenv.py  libenv_test.py  test_libenv.py
testing/: Dockerfile  run-tests.sh
